  bitmap fonts used in the currect DVI file. Even glyphs that are currently
  not needed are considered. This avoids multiple calls of Metafont for the 
  same fonts. In combination with the new caching functionality this can 
  drastically increase the speed of successive dvisvgm calls.
- if option --no-fonts is used, all glyph sizes are now computed correctly

dvisvgm-0.7.1
- evaluation of a subset of emTeX specials has been added
- specials for embedding of raw SVG snippets have been added
- evaluation of TPIC specials has been added
- added background color support
- added option -n, --no-fonts that replaces fonts by paths
  (enables applications w/o SVG font support to render dvisvgm's output properly)
- moved defs to top of SVG file to make Firefox's SVG renderer happy
- fixed bug in color handler

dvisvgm-0.7
- basic support for evaluation of specials has been added
- evaluation of color specials has been added
- renamed command-line option -S to --no-specials and inverted previous behavior
- selected special sets can be disabled by optional arguments to --no-specials
  (currently only color specials)
- added option --no-style (see manpage for further details)
- added optional '+' flag to option --map-file (see manpage for further details)
- fixed \magnificaton bug (dvi magnification factor is now applied properly)
- fixed buggy call of maketfm/makemf in Windows/MiKTeX version
- fixed buggy evaluation of command-line argument -m/--map-file
- several internal code improvements

dvisvgm-0.6.1
- added support for dvips map files
- removed dependency on dvipdfm's map file (now ps2pk.map, psfonts.map or dvipdfm.map is used by default)
- fixed compilation bug #2535497
- some internal refactorings

dvisvgm-0.6
- added support for varying font encodings
- updated MiKTeX support using its COM interface
- fixed incomplete handling of nested virtual fonts
- fixed a font handling bug that could cause segmentation faults
- fixed bug in matrix transformation code